# tsclient-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: ci-publish.yml  publish.yml
src/: api.rs  client.rs  commands.rs  discovery.rs  errors.rs  events.rs  helpers.rs  lib.rs  notifications.rs  throttle.rs  transfer.rs  types.rs
src/command/: mod.rs
src/crypto/: crypt.rs  eax.rs  identity.rs  mod.rs  primitives.rs
src/handshake/: crypt_handshake.rs  crypt_init2.rs  license.rs  mod.rs
src/transport/: generation_window.rs  handler.rs  mod.rs  packet.rs  quicklz.rs
