[package]
name = "tsclient-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
bytes = "1"
tokio = { version = "1", features = ["net", "time", "rt", "macros", "sync"] }
async-trait = "0.1"

# crypto
aes = "0.8"
ctr = "0.9"
cmac = "0.7"
cipher = "0.4"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
ed25519-dalek = "2"
curve25519-dalek = "4"
p256 = { version = "0.13", features = ["ecdh", "pem", "ecdsa"] }
x25519-dalek = "2"
rsa = "0.9"
der = "0.7"
rand = "0.8"
num-bigint = "0.4"
base64 = "0.22"
sha1 = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }

# dns
hickory-resolver = "0.24"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# logging
tracing = "0.1"
